# episciences-api

./: README.md  episcience-api.py  episcience_api.py  episcience_req.py  episcience_streamlit.py  episciences_api.py  episciences_req.py  episciences_streamlit.py  format_for_email.py  pyproject.toml  requirements.txt
episciences/: __init__.py  episciences_api.py
episciences/scripts/: create_data_repo.py  episciences_req.py  episciences_req_authors.py
