[tool.poetry]
name = "episciences-api"
version = "0.1.0"
description = "Python module to use the episciences api and manipulate papers and users"
authors = ["Guillaume Anciaux <guillaume.anciaux@epfl.ch>"]
license = "GPL"
readme = "README.md"
packages = [{include = "episciences"}]

[tool.poetry.dependencies]
python = "^3.10"
extra-streamlit-components = "^0.1.70"
streamlit = "^1.31.1"
xmltodict = "^0.13.0"
dotmap = "^1.3.30"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
epi = "episciences.scripts.episciences_req:main"
epi-dataset = "episciences.scripts.create_data_repo:main"